<resources>
    <string name="app_name">VenueNext SDK Demo</string>
    <string name="app_version">0.11.0</string>

    <string name="config_file_1">vn_sdk_config</string>
    <string name="config_file_2">vn_sdk_config_2</string>

    <!-- Navigation Titles -->
    <string name="nav_food_and_bev_rvc_title">Menus</string>
    <string name="nav_merchandise_rvc_title">Gear</string>
    <string name="nav_marketplace_experiences_rvc_title">Market</string>
    <string name="nav_order_history_title">Orders</string>
    <string name="nav_wallet_title">Wallet</string>
    <string name="nav_more_title">More</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_app_version">VenueNext SDK Version: %s</string>

    <string name="settings_section_menus">Revenue Centers</string>
    <string name="settings_display_all_rvc">Launch All Revenue Centers Flow</string>
    <string name="settings_display_f_and_b_rvc">Launch Food &amp; Bev Flow</string>
    <string name="settings_display_merchandise_rvc">Launch Merchandise Flow</string>
    <string name="settings_display_marketplace_experiences">Launch Marketplace Experiences Flow</string>

    <string name="settings_section_orders">Order History</string>
    <string name="settings_launch_order_history">Launch Orders Flow</string>

    <string name="settings_section_wallet">Wallet</string>
    <string name="settings_launch_wallet">Launch Wallet</string>
    <string name="settings_wallet_not_ready">Log in to ticketing provider before accessing Wallet</string>

    <string name="settings_section_direct_launch">Direct Launch Flows</string>
    <string name="settings_launch_to_food_menu">Launch to Food Menu</string>
    <string name="settings_launch_to_experience_menu">Launch to Experience Menu</string>
    <string name="settings_launch_to_experience_menu_event_selected">Launch to Experience Menu (Event Selected)</string>
    <string name="settings_launch_to_experience_detail">Launch to Experience Detail</string>
    <string name="settings_show_purchased_experience_receipt">Show Purchased Experience (Receipt)</string>
    <string name="settings_show_awarded_or_transferred_experience_receipt">Show Awarded/Xfered Experience (Card)</string>

    <!-- Demo app settings -->
    <string name="settings_section_demo">Demo App</string>
    <string name="settings_logout_tm">Log out of Ticketmaster</string>
    <string name="tm_not_logged_in">Not logged in</string>
    <string name="tm_logging_out">Logging out of Ticketmaster</string>
    <string name="settings_launch_tm">Launch Ticketmaster</string>
    <string name="new_jwt_or_org">Re Init SDK</string>

    <string name="enter_jwt">Enter the JSON Web Token</string>
    <string name="enter_key">Enter the Org\'s SDK Key</string>
    <string name="enter_secret">Enter the Org\'s SDK Secret</string>
    <string name="test_init_success">Successfully initialized SDK.</string>
    <string name="test_init_failure">Failed to initialize SDK.</string>
    <string name="choose_org">Please select an organization</string>
    <string name="org_1">Example Org 1</string>
    <string name="org_2">Example Org 2</string>
    <string-array name="orgs_array">
        <item>@string/org_1</item>
        <item>@string/org_2</item>
    </string-array>

    <!-- Ticketmaster -->
    <string name="logout">Logout</string>
    <string name="tickets">Tickets</string>
    <string name="tm_config_failure">Ticketmaster is unavailable, please try again later</string>
    <string name="sdk_login_failure">Failed to log in to VenueNext SDK. Please try again later</string>
    <string name="sdk_logout_failure">Failed to log out of VenueNext SDK. Please try again later</string>

</resources>
